--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.10.5",
     "dotenv": "^16.3.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
