--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-icons": "^1.10.5",
     "dotenv": "^16.3.1",
     "pinia": "^2.1.6",
+    "sweetalert2": "^11.7.20",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
